bizinikiwi/pezframe/support/test/tests/runtime_ui/conflicting_pallet_index.stderr
error: Pezpallet indices are conflicting: Both pallets System and Pezpallet are at index 0
  --> tests/runtime_ui/conflicting_pallet_index.rs:37:14
   |
37 |     pub type System = pezframe_system;
   |              ^^^^^^

error: Pezpallet indices are conflicting: Both pallets System and Pezpallet are at index 0
  --> tests/runtime_ui/conflicting_pallet_index.rs:40:14
   |
40 |     pub type Pezpallet = pezpallet;
   |              ^^^^^^^^^
